# mtg_demo

./: CMakeLists.txt
app/inc/: mtgdl.h
app/src/: main.cpp
libs/atherdrift/inc/: atherdrift.h
libs/atherdrift/src/: atherdrift.cpp
libs/bloomburrow/inc/: bloomburrow.h
libs/bloomburrow/src/: bloomburrow.cpp
